--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "albertgpdev/cookie-info-bar",
     "version": "0.0.1",
-    "type": "project",
+    "type": "package",
     "license": "MIT",
     "authors": [
         {
