--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     }
   ],
   "minimum-stability": "dev",
+  "prefer-stable": false,
   "autoload": {
     "psr-4": {
       "Albertgpdev\\CookieInfoBar\\": "src/"
